chattr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chattr
  namespace: canary-test-team
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chattr
  template:
    metadata:
      labels:
        app: chattr
    spec:
      containers:
      - name: chattr
        image: aaronhamil5/chattr:latest
        ports:
        - containerPort: 5000
