service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: chattr-lb
  namespace: canary-test-team
spec:
  type: LoadBalancer
  selector:
    app: chattr
  ports:
  - port: 80
    targetPort: 5000
