service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: chattr-service
  namespace: canary-test-team
spec:
  type: NodePort
  selector:
    app: chattr
  ports:
  - port: 8080
    targetPort: 5000
    nodePort: 31080
