chattr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chattr-ingress
  namespace: canary-test-team
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chattr-service
                port:
                  number: 5000
